update build version

--- a/updater/changelog.txt
+++ b/updater/changelog.txt
@@ -1,13 +1,11 @@
-Project name: Radioactive_kernel_oneplus8Series-V2.1.6
-  * qseecom: Add boundary checks between two subsequent fields (Nitin LNU) [fdb66a526112]
-  * arm64: fix bootloader_memory_limit (Srinivasarao P) [6a6d01131f5b]
-  * bq27541: Return -ENODATA when DASH charging (LuK1337) [68e785b44c07]
-  * net/sched: Shut up (celtare21) [22f7a1e1dd00]
-  * GKI: hwtracing: Add a driver for disabling coresight clocks (J. Avila) [cacf6e0d5e68]
-  * Synchronize codes for OnePlus 8T Oxygen OS 11.0.8.11.KB05AA and OnePlus 8 Oxygen OS 11.0.5.5.IN21AA and OnePlus 8 Pro Oxygen OS 11.0.5.5.IN11AA (yu.huang) [d9a92ce977ea]
-  * arch: Kconfig: enable CONFIG_RELR by default (Kristof Petho) [b537c28d50f0]
-  * defconfig: disable IPC_LOGGING (Kristof Petho) [a61309a5574b]
-  * defconfig: enable JUMP_LABEL (Kristof Petho) [7aa08d410998]
-  * BACKPORT: arm64: vdso: Explicitly add build-id option (Laura Abbott) [18d3bf8321d5]
-  * BACKPORT: arm64: vdso: use $(LD) instead of $(CC) to link VDSO (Masahiro Yamada) [ca50bc02d013]
-  * UPSTREAM: arm64: vdso: fix and clean-up Makefile (Masahiro Yamada) [21d290615495]
+Project name: Radioactive_kernel_oneplus8Series-V2.2.0
+  * update build version
+  * cnss2: Synchronize bus suspend and resume (Mahesh Kumar Kalikot Veetil) [74a0e3bb1e00]
+  * cnss2: Set PCIe link state in proper state during resume (Yue Ma) [d5899daf3dac]
+  * msm/vidc: remove debug logging and logging decision (Kristof Petho) [684044bb72f2]
+  * msm/cvp: remove debug logging and logging decision (Kristof Petho) [dce1338ccfe7]
+  * drivers/oneplus: demote verbose logging to debug (Kristof Petho) [7a5eaee88601]
+  * sched: Avoid scale real weight down to zero (Michael Wang) [f06a97838017]
+  * sched: rt: Fix double accounting of cpu util in task placement decision (Lingutla Chandrasekhar) [b035b14d048d]
+  * defconfig regenerate (acuicultor) [bc5e3b619e36]
+  * import latest oneplus source
